Implement the initial form of the SignupServlet